--- a/main_app/static/css/styles.css
+++ b/main_app/static/css/styles.css
@@ -25,7 +25,7 @@ footer div{
 main{
     flex: 1 0 auto;
 }
-
+<https://github.com/dmscola/cis255/pull/1>
 footer.page-footer{
     padding-top: 0;
     text-align: right;
